# kalshi-cricket

./: Cargo.toml  README.md
src/: config.rs  kalshi.rs  llm.rs  main.rs
src/f1/: mod.rs  overtakes.rs  race_control.rs  sessions.rs
src/kalshi/: balance.rs  kalshi.rs  markets.rs  mod.rs  orders.rs  positions.rs  purchase.rs
src/llm/: llm.rs  mod.rs  price_agent.rs  search_agent.rs
