[package]
name = "kalshi-cricket"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
base64 = "0.22.1"
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive"] }
config = "0.15.19"
directories = "6.0.0"
figment = { version = "0.10.19", features = ["toml"] }
rand = "0.8.5"
reqwest = { version = "0.13.2", features = ["json"] }
rsa = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.12"
